--- a/SpringProject/src/main/resources/application.properties
+++ b/SpringProject/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://ssdtech.ckgdevoc4wge.ap-northeast-1.rds.amazonaws.com:3306/kiran_db
+                                                                                                # change your created db with kiran_db
 spring.datasource.username=root
 spring.datasource.password=Sai_meesala2
